Add Draft makePathArray and _PathArray
Add Draft PathArray GUI tool

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -40,6 +40,7 @@
         <file>icons/Draft_Dot.svg</file>
         <file>icons/Draft_Point.svg</file>
         <file>icons/Draft_Snap.svg</file>
+        <file>icons/Draft_PathArray.svg</file>
         <file>icons/Snap_Lock.svg</file>
         <file>icons/Snap_Endpoint.svg</file>
         <file>icons/Snap_Midpoint.svg</file>
