+ Apply Jim's fix of typos

--- a/src/Gui/DlgUnitsCalculator.ui
+++ b/src/Gui/DlgUnitsCalculator.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Units calculater</string>
+   <string>Units calculator</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
