+ Use icons and translated names for Part primitives

--- a/src/Mod/Part/Gui/DlgPrimitives.ui
+++ b/src/Mod/Part/Gui/DlgPrimitives.ui
@@ -32,80 +32,144 @@
       <property name="text">
        <string>Plane</string>
       </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Plane_Parametric.svg</normaloff>:/icons/Tree_Part_Plane_Parametric.svg</iconset>
+      </property>
      </item>
      <item>
       <property name="text">
        <string>Box</string>
+      </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Box_Parametric.svg</normaloff>:/icons/Tree_Part_Box_Parametric.svg</iconset>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Cylinder</string>
       </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Cylinder_Parametric.svg</normaloff>:/icons/Tree_Part_Cylinder_Parametric.svg</iconset>
+      </property>
      </item>
      <item>
       <property name="text">
        <string>Cone</string>
+      </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Cone_Parametric.svg</normaloff>:/icons/Tree_Part_Cone_Parametric.svg</iconset>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Sphere</string>
       </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Sphere_Parametric.svg</normaloff>:/icons/Tree_Part_Sphere_Parametric.svg</iconset>
+      </property>
      </item>
      <item>
       <property name="text">
        <string>Ellipsoid</string>
+      </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Ellipsoid_Parametric.svg</normaloff>:/icons/Tree_Part_Ellipsoid_Parametric.svg</iconset>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Torus</string>
       </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Torus_Parametric.svg</normaloff>:/icons/Tree_Part_Torus_Parametric.svg</iconset>
+      </property>
      </item>
      <item>
       <property name="text">
        <string>Prism</string>
+      </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Prism.svg</normaloff>:/icons/Tree_Part_Prism.svg</iconset>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Wedge</string>
       </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Tree_Part_Wedge.svg</normaloff>:/icons/Tree_Part_Wedge.svg</iconset>
+      </property>
      </item>
      <item>
       <property name="text">
        <string>Helix</string>
+      </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Part_Helix_Parametric.svg</normaloff>:/icons/Part_Helix_Parametric.svg</iconset>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Spiral</string>
       </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Part_Spiral_Parametric.svg</normaloff>:/icons/Part_Spiral_Parametric.svg</iconset>
+      </property>
      </item>
      <item>
       <property name="text">
        <string>Circle</string>
+      </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Part_Circle_Parametric.svg</normaloff>:/icons/Part_Circle_Parametric.svg</iconset>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Ellipse</string>
       </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Part_Ellipse_Parametric.svg</normaloff>:/icons/Part_Ellipse_Parametric.svg</iconset>
+      </property>
      </item>
      <item>
       <property name="text">
        <string>Point</string>
+      </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Part_Point_Parametric.svg</normaloff>:/icons/Part_Point_Parametric.svg</iconset>
       </property>
      </item>
      <item>
       <property name="text">
        <string>Line</string>
       </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Part_Line_Parametric.svg</normaloff>:/icons/Part_Line_Parametric.svg</iconset>
+      </property>
      </item>
      <item>
       <property name="text">
-       <string>RegularPolygon</string>
+       <string>Regular polygon</string>
+      </property>
+      <property name="icon">
+       <iconset resource="Resources/Part.qrc">
+        <normaloff>:/icons/Part_Polygon_Parametric.svg</normaloff>:/icons/Part_Polygon_Parametric.svg</iconset>
       </property>
      </item>
     </widget>
@@ -991,14 +1055,14 @@
             </item>
             <item row="0" column="1">
              <widget class="QSpinBox" name="prismPolygon">
-              <property name="maximum">
-               <double>1000</double>
-              </property>
               <property name="minimum">
-               <double>3</double>
+               <number>3</number>
+              </property>
+              <property name="maximum">
+               <number>1000</number>
               </property>
               <property name="value">
-               <double>6</double>
+               <number>6</number>
               </property>
              </widget>
             </item>
@@ -1883,14 +1947,14 @@
             </item>
             <item row="0" column="1">
              <widget class="QSpinBox" name="regularPolygonPolygon">
-              <property name="maximum">
-               <double>1000</double>
-              </property>
               <property name="minimum">
-               <double>3</double>
+               <number>3</number>
+              </property>
+              <property name="maximum">
+               <number>1000</number>
               </property>
               <property name="value">
-               <double>6</double>
+               <number>6</number>
               </property>
              </widget>
             </item>
@@ -1968,7 +2032,9 @@
   <tabstop>torusAngle2</tabstop>
   <tabstop>torusAngle3</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="Resources/Part.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>comboBox1</sender>
