--- a/src/Mod/MeshPart/Gui/Resources/MeshPart.qrc
+++ b/src/Mod/MeshPart/Gui/Resources/MeshPart.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource> 
         <file>icons/actions/MeshFace.svg</file>
+        <file>icons/Mesh_Mesh_from_Shape.svg</file>
         <file>translations/MeshPart_af.qm</file>
         <file>translations/MeshPart_de.qm</file>
         <file>translations/MeshPart_fi.qm</file>
