--- a/src/Mod/Part/Gui/Resources/Part.qrc
+++ b/src/Mod/Part/Gui/Resources/Part.qrc
@@ -51,6 +51,7 @@
         <file>icons/Tree_Part_Plane_Parametric.svg</file>
         <file>icons/Tree_Part_Prism.svg</file>
         <file>icons/Tree_Part_Wedge.svg</file>
+        <file>icons/Part_Shape_from_Mesh.svg</file>
         <file>translations/Part_af.qm</file>
         <file>translations/Part_de.qm</file>
         <file>translations/Part_fi.qm</file>
