Move Mesh_Mesh_from_Shape icon from Mod/MeshPart to Mod/Mesh
Move the icon Mesh_Mesh_from_Shape.svg
from .../Mod/MeshPart/Gui/Resources/icons
to .....//Mod/Mesh/Gui/Resources/icons
edit both Mesh.qrc and MeshPart.qrc accordingly
remove referrence to the icon from the command in
the MeshPart Command.cpp file and add it to
the Mesh Command.cpp file

--- a/src/Mod/Mesh/Gui/Resources/Mesh.qrc
+++ b/src/Mod/Mesh/Gui/Resources/Mesh.qrc
@@ -3,6 +3,7 @@
         <file>icons/mesh_boundary.svg</file>
         <file>icons/mesh_cut.svg</file>
         <file>icons/Tree_Mesh.svg</file>
+        <file>icons/Mesh_Mesh_from_Shape.svg</file>
         <file>translations/Mesh_af.qm</file>
         <file>translations/Mesh_de.qm</file>
         <file>translations/Mesh_fi.qm</file>
