Part Dimension: alterations to existing files
    Not sure what is happening with View3dInventorViewer.h.
    The only REAL change, beyond the addition of dim functions, is
    the removal of the member arrowrotation. It wasn't referenced anywhere.

--- a/src/Mod/Part/Gui/Resources/Part.qrc
+++ b/src/Mod/Part/Gui/Resources/Part.qrc
@@ -42,6 +42,14 @@
         <file>icons/Part_Point_Parametric.svg</file>
         <file>icons/Part_Polygon_Parametric.svg</file>
         <file>icons/Part_Spline_Parametric.svg</file>
+        <file>icons/Part_Measure_Linear.svg</file>
+        <file>icons/Part_Measure_Angular.svg</file>
+        <file>icons/Part_Measure_Clear_All.svg</file>
+        <file>icons/Part_Measure_Toggle_All.svg</file>
+        <file>icons/Part_Measure_Toggle_3d.svg</file>
+        <file>icons/Part_Measure_Toggle_Delta.svg</file>
+        <file>icons/Part_Measure_Step_Active.svg</file>
+        <file>icons/Part_Measure_Step_Done.svg</file>
         <file>icons/Tree_Part_Box_Parametric.svg</file>
         <file>icons/Tree_Part_Cylinder_Parametric.svg</file>
         <file>icons/Tree_Part_Cone_Parametric.svg</file>
