--- a/src/Mod/Mesh/Gui/Resources/Mesh.qrc
+++ b/src/Mod/Mesh/Gui/Resources/Mesh.qrc
@@ -12,6 +12,12 @@
         <file>icons/Mesh_Regular_Solid.svg</file>
         <file>icons/Mesh_Remove_Components.svg</file>
         <file>icons/Mesh_Tree_Curvature_Plot.svg</file>
+        <file>icons/RegularSolids/Mesh_Cone.svg</file>
+        <file>icons/RegularSolids/Mesh_Cube.svg</file>
+        <file>icons/RegularSolids/Mesh_Cylinder.svg</file>
+        <file>icons/RegularSolids/Mesh_Ellipsoid.svg</file>
+        <file>icons/RegularSolids/Mesh_Sphere.svg</file>
+        <file>icons/RegularSolids/Mesh_Torus.svg</file>
         <file>translations/Mesh_af.qm</file>
         <file>translations/Mesh_de.qm</file>
         <file>translations/Mesh_fi.qm</file>
