--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -90,6 +90,8 @@
         <file>Tree_Annotation.svg</file>
         <file>Tree_Dimension.svg</file>
         <file>Tree_Python.svg</file>
+        <file>Part_Measure_Clear_All.svg</file>
+        <file>Part_Measure_Toggle_All.svg</file>
         <file>spaceball_button.svg</file>
         <file>SpNav-PanLR.svg</file>
         <file>SpNav-PanUD.svg</file>
