Arch: Frame object - fixes #1166, #1314

--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -38,6 +38,8 @@
         <file>icons/Arch_Stairs_Tree.svg</file>
         <file>icons/Arch_Rebar.svg</file>
         <file>icons/Arch_Rebar_Tree.svg</file>
+        <file>icons/Arch_Frame.svg</file>
+        <file>icons/Arch_Frame_Tree.svg</file>
         <file>ui/archprefs-base.ui</file>
         <file>ui/archprefs-import.ui</file>
         <file>ui/ParametersWindowDouble.svg</file>
