Finish loading Calculix result files

--- a/src/Mod/Fem/Gui/Resources/Fem.qrc
+++ b/src/Mod/Fem/Gui/Resources/Fem.qrc
@@ -13,6 +13,9 @@
         <file>icons/Fem_AddPart.svg</file>
         <file>icons/Fem_Material.svg</file>
         <file>icons/Fem_NewAnalysis.svg</file>
+        <file>icons/Fem_Result.svg</file>
+        <file>icons/Fem_ResultDisplacement.svg</file>
+        <file>icons/Fem_ResultStress.svg</file>
         <file>translations/Fem_af.qm</file>
         <file>translations/Fem_de.qm</file>
         <file>translations/Fem_fi.qm</file>
