--- a/src/Mod/Part/Gui/DlgExtrusion.ui
+++ b/src/Mod/Part/Gui/DlgExtrusion.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>260</width>
-    <height>504</height>
+    <height>545</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -233,6 +233,13 @@
        <string>Shape</string>
       </property>
      </column>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="statusLabel">
+     <property name="text">
+      <string notr="true">StatusLabel</string>
+     </property>
     </widget>
    </item>
   </layout>
