Added icon-based feedback for InputField

--- a/src/Gui/Icons/resource.qrc
+++ b/src/Gui/Icons/resource.qrc
@@ -14,6 +14,8 @@
         <file>button_left.svg</file>
         <file>button_right.svg</file>
         <file>button_up.svg</file>
+        <file>button_valid.svg</file>
+        <file>button_invalid.svg</file>
         <file>macro-execute.svg</file>
         <file>macro-record.svg</file>
         <file>macro-stop.svg</file>
