Add BezCurve tangent/symmetric buttons to Draft.Edit

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -6,6 +6,8 @@
         <file>icons/Draft_Arc.svg</file>
         <file>icons/Draft_BSpline.svg</file>
         <file>icons/Draft_BezCurve.svg</file>
+        <file>icons/Draft_BezTanNode.svg</file>
+        <file>icons/Draft_BezSymNode.svg</file>
         <file>icons/Draft_Circle.svg</file>
         <file>icons/Draft_Construction.svg</file>
         <file>icons/Draft_DelPoint.svg</file>
