--- a/src/Mod/Arch/Resources/ui/archprefs-import.ui
+++ b/src/Mod/Arch/Resources/ui/archprefs-import.ui
@@ -246,6 +246,26 @@
         </item>
        </layout>
       </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="Gui::PrefCheckBox" name="gui::prefcheckbox_3">
+          <property name="toolTip">
+           <string>If this is checked, a text file will be exported together with the ifc file, containing the list of exported objects, for verification purposes.</string>
+          </property>
+          <property name="text">
+           <string>Save a list of exported objects</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>IfcExportList</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/Arch</cstring>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
      </layout>
     </widget>
    </item>
