using QProcess for starting Calculix

--- a/src/Mod/Fem/MechanicalAnalysis.ui
+++ b/src/Mod/Fem/MechanicalAnalysis.ui
@@ -31,7 +31,7 @@
    <item>
     <widget class="QPushButton" name="pushButton_generate">
      <property name="text">
-      <string>Run</string>
+      <string>Run Calculix</string>
      </property>
     </widget>
    </item>
