Arch: Axis-bbased structural systems are now a separate object - fixes #1486

--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -42,6 +42,8 @@
         <file>icons/Arch_Frame_Tree.svg</file>
         <file>icons/Arch_Survey.svg</file>
         <file>icons/IFC.svg</file>
+        <file>icons/Arch_StructuralSystem.svg</file>
+        <file>icons/Arch_StructuralSystem_Tree.svg</file>
         <file>ui/archprefs-base.ui</file>
         <file>ui/archprefs-import.ui</file>
         <file>ui/ParametersWindowDouble.svg</file>
