Arch: Starting Panel tool

--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -40,6 +40,8 @@
         <file>icons/Arch_Rebar_Tree.svg</file>
         <file>icons/Arch_Frame.svg</file>
         <file>icons/Arch_Frame_Tree.svg</file>
+        <file>icons/Arch_Panel.svg</file>
+        <file>icons/Arch_Panel_Tree.svg</file>
         <file>icons/Arch_Survey.svg</file>
         <file>icons/IFC.svg</file>
         <file>icons/Arch_StructuralSystem.svg</file>
